adiciona documentacao do swagger a os outros endpoints
